<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="balance" type="jp.pois.crowpay.repos.entities.Balance"/>
        <variable name="user" type="jp.pois.crowpay.repos.entities.User"/>
        <variable name="handler" type="android.view.View.OnClickListener"/>
        <import type="jp.pois.crowpay.repos.entities.UserKt"/>
        <import type="jp.pois.crowpay.utils.StringFormatterKt"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
        <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sent_balance"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/description">
            <TableRow>
                <TextView
                        android:layout_column="0"
                        android:text="@string/other_party_name"
                        android:textSize="20sp"
                        android:gravity="start"/>
                <TextView
                        android:text="@{UserKt.getDisplayName(user)}"
                        android:textSize="20sp"
                        android:gravity="end"
                        tools:text="User1"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_column="0"
                        android:text="@string/amount_input_hint"
                        android:textSize="20sp"
                        android:gravity="start"/>
                <TextView
                        android:text="@{String.valueOf(balance.amount)}"
                        android:textSize="20sp"
                        android:gravity="end"
                        tools:text="2000"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_column="0"
                        android:text="@string/created_at_input_hint"
                        android:textSize="20sp"
                        android:gravity="start"/>
                <TextView
                        android:text="@{StringFormatterKt.getToText(balance.createdAt)}"
                        android:textSize="20sp"
                        android:gravity="end"
                        tools:text="2020/04/01"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_column="0"
                        android:text="@string/deadline_input_hint"
                        android:textSize="20sp"
                        android:gravity="start"/>
                <TextView
                        android:text="@{StringFormatterKt.getToTextOrEmpty(balance.deadline)}"
                        android:textSize="20sp"
                        android:gravity="end"
                        tools:text="2021/04/01"/>
            </TableRow>
        </TableLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:onClick="@{handler}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
