<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="jp.pois.crowpay.viewmodels.SetBalanceViewModel"/>
        <variable name="handlers" type="jp.pois.crowpay.fragments.balance.SetBalanceFragment.OnClickHandlers"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_input_hint"
                app:layout_constraintTop_toTopOf="parent"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={viewModel.amountString}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/created_at_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/created_at_input_hint"
                app:layout_constraintTop_toBottomOf="@+id/amount_input_container"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/created_at_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.createdAtString}"
                    android:onClick="@{() -> handlers.createdAt()}"
                    android:focusableInTouchMode="false"
                    android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deadline_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/deadline_input_hint"
                app:endIconDrawable="@drawable/ic_baseline_clear"
                app:layout_constraintTop_toBottomOf="@+id/created_at_input_container"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deadline_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.deadlineString}"
                    android:onClick="@{() -> handlers.deadline()}"
                    android:focusableInTouchMode="false"
                    android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/remark_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remark_input_hint"
                app:layout_constraintTop_toBottomOf="@+id/deadline_input_container"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/remark_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@={viewModel.remark}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_button"
                android:onClick="@{() -> handlers.next()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
